Add user management, audit log improvements, upstream visual form, and UI refinements
- Add user management with RBAC (admin/user roles) and instance isolation
- Restrict user management and instance pages to admin only
- Rewrite audit log as visual timeline with before/after diff for updates
- Show resource name instead of ID in audit log descriptions
- Replace upstream JSON editor with visual form (LB type, nodes, timeouts)
- Add name-confirmation delete dialogs to routes, services, and upstreams
- Rename RouteForge to Routeforge throughout the project
- Add error logging to all catch blocks in backend services
- Add dropdown selectors for upstream/service in route form with inline config